# archiver-rs

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: publish.yml  test.yml  upload_asset.sh
src/: archiver.rs  compression.rs  error.rs  lib.rs  main.rs
