[package]
name = "archiver"
version = "0.1.5"
authors = ["Tree Xie <tree.xie@outlook.com>"]
edition = "2021"
keywords = ["archiver", "compress"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compression = { version = "0.4.18", features = [
    "gzip",
    "zstd",
    "tokio",
    "deflate",
    "brotli",
    "xz",
] }
glob = "0.3.1"
uuid = { version = "1.11.0", features = [
    "v7",
    "fast-rng",
    "macro-diagnostics",
] }
snafu = "0.8.5"
tempfile = "3.14.0"
time = "0.3.37"
tokio = { version = "1.42.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "fs",
] }
tokio-tar = "0.3.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["local-time"] }
clap = { version = "4.5.22", features = ["derive"] }
path-absolutize = "3.1.1"
substring = "1.4.5"
dirs = "5.0.1"
snap = "1.1.1"
lz4_flex = "0.11.3"
humantime = "2.1.0"
bytesize = "1.3.0"
tokio-stream = "0.1.17"
pad = "0.1.6"
unix_mode = "0.1.4"
filetime = "0.2.25"
chrono = "0.4.38"


[profile.release]
codegen-units = 1
lto = true
