[package]
name = "archiver"
version = "0.1.6"
authors = ["Tree Xie <tree.xie@outlook.com>"]
edition = "2021"
keywords = ["archiver", "compress"]
license = "Apache-2.0"
description = "A tool to compress and decompress files and directories"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compression = { version = "0.4.23", features = [
    "gzip",
    "zstd",
    "tokio",
    "deflate",
    "brotli",
    "xz",
] }
glob = "0.3.2"
uuid = { version = "1.16.0", features = [
    "v7",
    "fast-rng",
    "macro-diagnostics",
] }
snafu = "0.8.5"
tempfile = "3.19.1"
time = "0.3.41"
tokio = { version = "1.44.2", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "fs",
] }
tokio-tar = "0.3.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["local-time"] }
clap = { version = "4.5.37", features = ["derive"] }
path-absolutize = "3.1.1"
substring = "1.4.5"
dirs = "6.0.0"
snap = "1.1.1"
lz4_flex = "0.11.3"
humantime = "2.2.0"
bytesize = "2.0.1"
tokio-stream = "0.1.17"
pad = "0.1.6"
unix_mode = "0.1.4"
filetime = "0.2.25"
chrono = "0.4.40"


[profile.release]
codegen-units = 1
lto = true
